<resources>
    <string name="app_name">Carga Academica EISI UES</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_activity_admon_depto">Administracion de Departamentos</string>
    <string name="title_activity_nuevo_depto">Nuevo Departamento</string>
    <string name="title_activity_admin_catalogos">Administracion de Catalogos</string>
    <string name="title_activity_gestion_carga_acad">Gestion Carga Academica</string>
    <string name="title_activity_ciclo_insertar">Ingresar Ciclo Academico</string>
    <string name="title_activity_consultar_depto">ConsultarDeptoActivity</string>
    <string name="title_activity_actualizar_depto">ActualizarDeptoActivity</string>
    <string name="title_activity_ciclo_eliminar">Eliminar Ciclo Academico</string>
    <string name="title_activity_ciclo_actualizar">Actualizar Ciclo Academico</string>
    <string name="title_activity_insertar_locales">Insertar Locales</string>
    <string name="title_activity_gestion_mod_acad">Gestion Modalidad Academica</string>
    <string name="title_activity_locales_menu">Menu Locales</string>
    <string name="title_activity_insertar_modalidad_act_acad">Insertar Modalidad Actividad Academica</string>
    <string name="title_activity_modalidad_aamenu">Menu Modalidad</string>
    <string name="title_activity_modalidad_curso_menu">Menu Modalidad de Curso</string>
    <string name="title_activity_actividad_academica_menu">Menu Actividad Academica</string>
    <string name="title_activity_insertar_actividad_academica">Insertar Actividad Academica</string>
    <string name="title_activity_actividad_academica_consultar">Consultar Actividad Academica</string>
    <string name="title_activity_mod_act_acad_consultar_main">Consultar Modalidad</string>
    <string name="title_activity_modalidad_curso_consultar">Cosultar Modalidad de Curso</string>
    <string name="title_activity_modalidad_curso_eliminar">Eliminar Modalidad de Curso</string>
    <string name="title_activity_modalidad_curso_actualizar">Actualizar Modalidad de Curso</string>
    <string name="title_activity_mod_act_acad_eliminar">Eliminar Modalidad Actividad Academica</string>
    <string name="title_activity_mod_act_acad_actualizar">Actualizar Modalidad</string>
    <string name="title_activity_actividad_academica_eliminar">Eliminar Actividad Academica</string>
    <string name="title_activity_actividad_academica_actualizar">Actualizar Actividad Academica</string>
    <string name="title_activity_menu_act_academicas">Menu Actividades Academicas</string>
    <string name="title_activity_locales_eliminar">Eliminar Locales</string>
    <string name="title_activity_locales_actualizar">Actualizar Locales</string>
    <string name="title_activity_locales_consultar">Consultar Locales</string>
    <string name="title_activity_eliminar_depto">Eliminar Departamento</string>
    <string name="title_activity_admon_materia">Administracion de Materias</string>
    <string name="title_activity_nueva_materia">Nueva Materia</string>
    <string name="title_activity_actualizar_materia">Actualizar Materia</string>
    <string name="title_activity_consultar_materia">Consultar Materia</string>
    <string name="title_activity_eliminar_materia">Eliminar Materia</string>
    <string name="title_activity_area_materia_insertar">Insertar Area de Materia</string>
    <string name="title_activity_are_materia_consultar">Consultar Are de Materia</string>
    <string name="title_activity_are_materia_nueva">Nueva Are de Materia </string>
    <string name="title_activity_are_materia_eliminar">Eliminar Area de Materia</string>
    <string name="title_activity_are_materia_actualizar">Actualizar Are de Materia</string>
    <string name="title_activity_admon_area_mat">Administrar Area de Materia</string>
    <string name="action_settings">Configuraciones</string>
    <string name="hello_world">Hola mundo!</string>
    <string name="btnEntrarSistema">Entrar al sistema</string>
    <string name="btnAdmonCat">Administracion de Catalogos</string>
    <string name="btnNuevoDepto">Nuevo Departamento</string>
    <string name="msgidDepto">Codigo del departamento</string>
    <string name="tituloDepto">Nuevo Departamento</string>
    <string name="msgNomDepto">Nombre del departamento</string>
    <string name="btnGuardarDepto">Guardar Departamento</string>
    <string name="btnLimpiaDepto">Limpiar entradas</string>
    <string name="btn1TablaCiclo">Ciclos</string>
    <string name="btn2TablaCargaAcademica">Carga Academica</string>
    <string name="btn3DetCargaMateria">Asignacion de Curso</string>
    <string name="btn4DetCargaActAcademica">Asignacion de Carga Academica</string>
    <string name="btn5A_CargaAcademica">Gestion Carga Academica</string>
    <string name="msgElimDepto">Eliminar Departamento</string>
    <string name="btnAdmonDepto">Administracion de Departamento</string>
    <string name="btnConsultarDepto">Consultar Departamento</string>
    <string name="tvConsultarDepto">Consultar Departamento</string>
    <string name="btnActualizarDepto">Actualizar Departamento</string>
    <string name="btnEliminarDepto">Eliminar Departamento</string>
    <string name="msgActualizarDepto">Actualizar Departamento</string>
    <string name="msgidLocal">Codigo del Local</string>
    <string name="msgCapLocal">Capacidad del Local</string>
    <string name="btnGuardarLocal">Guardar Local</string>
    <string name="nLocal">Nuevo Local</string>
    <string name="btn_limpiarLocal">Limpiar Entradas</string>
    <string name="btnModAcad">Modalidad Actividad Academica</string>
    <string name="btnActAcad">Actividad Academica</string>
    <string name="btnLocales">Locales</string>
    <string name="btnModCurso">Modalidad de Curso</string>
    <string name="btnCrago_Docentes2">Cargo para Docentes</string>
    <string name="btnModalAcad">Modalidades Academicas</string>
    <string name="btn1_insertar_local">Insertar Local</string>
    <string name="btn2_consultar_local">Consultar Local</string>
    <string name="btn3_eliminar_local">Eliminar Local</string>
    <string name="btn4_actualizar_local">Actualizar Local</string>
    <string name="TextViewLocales">Menu Locales</string>
    <string name="msgNombreModAA">Digite nombre modalidad</string>
    <string name="msgidModalidadAA">Digite codigo de modalidad</string>
    <string name="msgDescHorasModAA">Digite horas de descuento</string>
    <string name="TextViewModAA">Insertar Modalidad Actividad Academica</string>
    <string name="TextViewModalidad">Menu Modalidad Act Academica</string>
    <string name="btn1_insertar_Modalidad">Insertar Modalidad Act Acad</string>
    <string name="btn2_consultar_Modalidad">Consultar Modalidad Act Acad</string>
    <string name="btn3_eliminar_Modalidad">Eliminar Modalidad Act Acad</string>
    <string name="btn4_actualizar_Modalidad">Actualizar Modalidad AA</string>
    <string name="TextViewModalidadCurso">Menu Modalidad Curso</string>
    <string name="btn1_insertar_ModalidadCurso">Insertar Modalidad Curso</string>
    <string name="btn2_consultar_ModalidadCurso">Consultar Modalidad Curso</string>
    <string name="btn3_eliminar_ModalidadCurso">Eliminar Modalidad Curso</string>
    <string name="btn4_actualizar_ModalidadCurso">Actualizar Modalidad Curso</string>
    <string name="TextViewActividadAcad">Menu Actividad Academica</string>
    <string name="btn1_insertar_ActividadAcad">Insertar Actividad Academica</string>
    <string name="btn2_consultar_ActividadAcad">Consultar Actividad Academica</string>
    <string name="btn3_eliminar_ActividadAcad">Eliminar Actividad Academica</string>
    <string name="btn4_actualizar_ActividadAcad">Actualizar Actividad Academica</string>
    <string name="title_activity_insertar_modalidad_curso">Insertar Modalidad Curso</string>
    <string name="msgidModalidadCurso">Digite codigo Mod Curso</string>
    <string name="msgNomModalidadCurso">Digite nombre de Modalidad</string>
    <string name="msgDesHModalidadCurso">Digite descuento horas</string>
    <string name="TextViewModC">Modalidad Curso</string>
    <string name="btnGuardarModalidadC">Guardar Modalidad Curso</string>
    <string name="btn_limpiarModC">Limpiar Entradas</string>
    <string name="msgActivAcad">Insertar Actividad Academica</string>
    <string name="msgidActAcad">Digite codigo</string>
    <string name="msgNombreActAcad">Digite nombre actividad</string>
    <string name="msgCargoActAcad">Digite cargo</string>
    <string name="btnGuardarActAcad">Guardar Actividad</string>
    <string name="btnLimpiarActAcad">Limpiar Campos</string>
    <string name="btnGuardarModaAA">Guardad Modalidad</string>
    <string name="selectIdLocal">Seleccione Local</string>
    <string name="spinner_Slocal">Seleccionar Local</string>
    <string name="msgCapacLocal">Capacidad Local</string>
    <string name="selectCapaLocal">Capacidad del Local</string>
    <string name="ConsModCurso">Seleccionar id de Modalidad</string>
    <string name="msgModalCurso">Nombre de Modalidad</string>
    <string name="msgDescModalCurso">Descuento Horas</string>
    <string name="spinner_ModCurso">Modalidad Curso</string>
    <string name="TextV_ModAA">Seleccionar Modalidad</string>
    <string name="Act_Locales">Seleccionar Local</string>
    <string name="spinner_EModCurso">Modalidad Curso</string>
    <string name="ElimModCurso">Seleccione Curso</string>
    <string name="Act_ModCurso">Seleccione Curso a Actualizar</string>
    <string name="msgNombreModCurso">Nombre Modalidad</string>
    <string name="msgSelectActAcad">Nombre de Actividad</string>
    <string name="msgSelectCargoActAcad">Cargo</string>
    <string name="ActActAcademica">Actividad a Actualizar</string>
    <string name="spinner_ActActAcad">Actualizar</string>
    <string name="ButtonActActAcademica">Actualizar Datos</string>
    <string name="ActNombre_AA">Nombre Actividad</string>
    <string name="ActCargo_ActAcademica">Cargo</string>
    <string name="msgInsertCodigoTipoCont">Codigo</string>
    <string name="msgInsertTipoTipoCont">Nombre de Contrato</string>
    <string name="msgInsertHorasTipoCont">Horas del Contrato</string>
    <string name="btnInsertGuardarTipoCont">Guardar Contrato</string>
    <string name="btnInsertLimpiarTipoCont">Limpiar</string>
    <string name="msgInsertCodigo">Codigo de Contrato</string>
    <string name="msgInsertNombre">Nombre o Tipo del Contrato</string>
    <string name="msgInsertHoras">Horas del Contrato</string>
    <string name="msgpromtspninsertar">Tipo de Contrato</string>
    <string name="msgeditTxtInsertIdDocente">Codigo del Docente</string>
    <string name="msgeditTxtInsertNomDocente">Nombre del Docente</string>
    <string name="msgeditTxtInsertApeDocente">Apellido del Docente</string>
    <string name="msgeditTxtInsertGraDocente">Grado Academico</string>
    <string name="msgeditTxtInsertEmailDocente">Correo del Docente</string>
    <string name="msgeditTxtInsertTelDocente">Telefono del Docente</string>
    <string name="msgbtnInsertGuardar">Guardar</string>
    <string name="msgactivityinsertardocente">Insertar Docente</string>
    <string name="msgactivityactualizardocente">Actualizar Docente</string>
    <string name="msgbtnactualizardocente">Actualizar Informacion</string>
    <string name="textview_fechaini">Fecha Inicio de Ciclo</string>
    <string name="textview_fechafin">Fecha Fin de Ciclo</string>
    <string name="textview_selecioneanio_ciclo">Selecione el año</string>
    <string name="spinner_anio_ciclo">Selecione Año del Ciclo</string>
    <string name="textview_selecione_ciclo">Selecione el Ciclo</string>
    <string name="spinner_ciclo">Selecione el Ciclo</string>
    <string name="button2_limpiartexto_ciclo">Limpiar Entradas</string>
    <string name="consult_fechainicio_hint">Fecha Inicio Ciclo</string>
    <string name="consult_fechafin_hint">Fecha Fin Ciclo</string>
    <string name="button2a_concultar_Ci">Consultar</string>
</resources>