<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InsertarDocenteActivity" >

    <EditText
        android:id="@+id/editTxtInsertCodigoDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertIdDocente" />

    <Spinner
        android:id="@+id/spnInsertCodTipContDocente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtInsertCodigoDocente"
        android:layout_centerHorizontal="true"
        android:prompt="@string/msgpromtspninsertar" />

    <EditText
        android:id="@+id/editTxtInsertNomDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnInsertCodTipContDocente"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertNomDocente" />

    <EditText
        android:id="@+id/editTxtInsertApeDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtInsertNomDocente"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertApeDocente" />

    <EditText
        android:id="@+id/editTxtInsertGraDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtInsertApeDocente"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertGraDocente" />

    <EditText
        android:id="@+id/editTxtInsertEmailDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtInsertGraDocente"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertEmailDocente"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTxtInsertTelDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtInsertEmailDocente"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertTelDocente"
        android:inputType="phone" />

    <Button
        android:id="@+id/btnGuardarInsertDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spnInsertCodTipContDocente"
        android:layout_alignTop="@+id/btnlimpiarInsertDocente"
        android:layout_marginLeft="21dp"
        android:drawableRight="@drawable/save"
        android:onClick="insertDocente"
        android:text="@string/msgbtnInsertGuardar"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnlimpiarInsertDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spnInsertCodTipContDocente"
        android:layout_below="@+id/editTxtInsertTelDocente"
        android:layout_marginRight="21dp"
        android:drawableRight="@drawable/clear"
        android:onClick="limpiarDocente"
        android:text="@string/btnInsertLimpiarTipoCont"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/msgactivityinsertardocente"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
