<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActividadAcademicaActualizarActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="34dp"
        android:text="@string/ActActAcademica" />
 
    <Spinner 
        android:id="@+id/spin_Act_ActAcademica"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:prompt="@string/spinner_ActActAcad" />

    <EditText
        android:id="@+id/SelNombreActAcad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CargoActAcad"
        android:layout_below="@+id/spin_Act_ActAcademica"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/msgSelectActAcad"
        android:inputType="none"
        android:maxLength="30" />

    <Button
        android:id="@+id/button1ActActividadAcad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CargoActAcad"
        android:layout_below="@+id/CargoActAcad"
        android:layout_marginTop="79dp"
        android:drawableRight="@drawable/save2"
        android:onClick="ActualizarActAcademica"
        android:text="@string/ButtonActActAcademica"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/CargoActAcad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spin_Act_ActAcademica"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/msgSelectCargoActAcad"
        android:inputType="none"
        android:maxLength="20" />
    
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/spin_Act_ActAcademica"
        android:layout_marginTop="15dp"
        android:text="@string/ActNombre_AA" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CargoActAcad"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/ActCargo_ActAcademica" />

</RelativeLayout>