<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InsertarActividadAcademicaActivity" >

   <EditText
        android:id="@+id/idActAcademica"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/msgidActAcad"
        android:maxLength="6" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/msgActivAcad" />

    <EditText
        android:id="@+id/NombreActAcad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/idActAcademica"
        android:layout_below="@+id/idActAcademica"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/msgNombreActAcad"
        android:maxLength="30" />

    <EditText
        android:id="@+id/CargoActAcad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NombreActAcad"
        android:layout_below="@+id/NombreActAcad"
        android:ems="10"
        android:hint="@string/msgCargoActAcad"
        android:maxLength="20" />

    <Button
        android:id="@+id/btnGuardarActAcad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CargoActAcad"
        android:layout_below="@+id/CargoActAcad"
        android:layout_marginTop="30dp"
        android:drawableRight="@drawable/save"
        android:onClick="insertarActAcademica"
        android:text="@string/btnGuardarActAcad"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/limpiarLocal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGuardarActAcad"
        android:layout_below="@+id/btnGuardarActAcad"
        android:drawableRight="@drawable/clear"
        android:onClick="limpiarActAcad"
        android:text="@string/btnLimpiarActAcad" />

    <Spinner
        android:id="@+id/spin_Select_ModalAA"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/idActAcademica"
        android:layout_below="@+id/idActAcademica"
        android:prompt="@string/spinner_Slocal" />

</RelativeLayout>