<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActualizarDocenteActivity" >

     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/msgactivityactualizardocente"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spnActuIdDocente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spnConsulCodTipContDocente"
        android:layout_below="@+id/textView1"
        android:prompt="@string/msgpromtspninsertar" />

    <Spinner
        android:id="@+id/spnActuCodTipContDocente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTxtActuNomDocente"
        android:layout_alignLeft="@+id/spnActuIdDocente"
        android:prompt="@string/msgpromtspninsertar" />

    <EditText
        android:id="@+id/editTxtActuNomDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTxtActuApeDocente"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertNomDocente" />

    <Button
        android:id="@+id/btnGuardarActuDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:drawableRight="@drawable/save"
        android:onClick="Actualizar"
        android:text="@string/msgbtnactualizardocente"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTxtActuTelDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnGuardarActuDocente"
        android:layout_alignLeft="@+id/editTxtActuEmailDocente"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertTelDocente"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTxtActuEmailDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTxtActuTelDocente"
        android:layout_alignLeft="@+id/editTxtActuGraDocente"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertEmailDocente"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTxtActuGraDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTxtActuEmailDocente"
        android:layout_alignLeft="@+id/editTxtActuApeDocente"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertGraDocente" />

    <EditText
        android:id="@+id/editTxtActuApeDocente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTxtActuGraDocente"
        android:layout_alignLeft="@+id/editTxtActuNomDocente"
        android:ems="10"
        android:hint="@string/msgeditTxtInsertApeDocente" />

</RelativeLayout>
