<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InsertarContratoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTxtInsertCodioTipoCont"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="18dp"
        android:text="@string/msgInsertCodigo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTxtInsertTipoTipoCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTxtInsertCodioTipoCont"
        android:layout_below="@+id/editTxtInsertCodioTipoCont"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/msgInsertTipoTipoCont" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/editTxtInsertCodioTipoCont"
        android:layout_marginTop="16dp"
        android:text="@string/msgInsertNombre"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/editTxtInsertTipoTipoCont"
        android:layout_marginTop="16dp"
        android:text="@string/msgInsertHoras"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTxtInsertHorasTipoCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTxtInsertTipoTipoCont"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/msgInsertHorasTipoCont"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTxtInsertCodioTipoCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/msgInsertCodigoTipoCont" />

    <Button
        android:id="@+id/btnGuardarInsertTipoCont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtInsertHorasTipoCont"
        android:layout_marginTop="28dp"
        android:drawableRight="@drawable/save"
        android:onClick="insertContrato"
        android:text="@string/btnInsertGuardarTipoCont"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnlimpiarInsertTipoCont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGuardarInsertTipoCont"
        android:layout_below="@+id/btnGuardarInsertTipoCont"
        android:layout_marginTop="14dp"
        android:drawableRight="@drawable/clear"
        android:onClick="limpiarContrato"
        android:text="@string/btnInsertLimpiarTipoCont" />

</RelativeLayout>
